<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.github.taillonk.unitconverterapp.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_convert"
        android:name="io.github.taillonk.unitconverterapp.ConvertFragment"
        android:label="@string/title_converter"
        tools:layout="@layout/fragment_convert" />

    <fragment
        android:id="@+id/navigation_help"
        android:name="io.github.taillonk.unitconverterapp.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />
</navigation>