<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:backgroundTint="#C3FFFFFF"
    android:backgroundTintMode="src_over"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".ConvertFragment">

    <TextView
        android:id="@+id/text_home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1F040404"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/text_converter_title"
        android:textAlignment="center"
        android:textColor="@color/deep_space_sparkle"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/converter_instruction1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/pastel_orange"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:labelFor="@id/category_spinner"
        android:text="@string/text_converter_instruction1"
        android:textSize="15sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal">

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white_smoke"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="0dp"
            android:contentDescription="@null"
            android:src="@drawable/outline_arrow_drop_down_circle_24" />
    </FrameLayout>

    <TextView
        android:id="@+id/converter_instruction2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/pastel_orange"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/text_converter_instruction2"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/converter_instruction3"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:labelFor="@id/convert_from_spinner"
            android:text="@string/text_converter_instruction3"
            android:textSize="15sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/convert_from_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#C3FFFFFF"
                android:spinnerMode="dropdown"
                android:textAlignment="center"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="5dp"
                android:contentDescription="@null"
                android:src="@drawable/outline_arrow_drop_down_circle_24" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/converter_instruction4"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:labelFor="@id/convert_to_spinner"
            android:text="@string/text_converter_instruction4"
            android:textSize="15sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/convert_to_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#C3FFFFFF"
                android:spinnerMode="dropdown"
                android:textAlignment="center"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="5dp"
                android:contentDescription="@null"
                android:src="@drawable/outline_arrow_drop_down_circle_24" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/converter_instruction5"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:labelFor="@id/value_to_convert"
            android:text="@string/text_converter_instruction5"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/value_to_convert"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:ems="5"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/convert_button"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:text="@string/convert_button"
            android:textColor="@color/white_smoke"
            android:textSize="12sp" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/reset_button"
            android:textColor="@color/white_smoke"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#A2FFC94B"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/result"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/result"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/converted_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>